--- a/aula 30-10/index.html
+++ b/aula 30-10/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Aula 30-10</title>
+   <link rel="stylesheet" href="styles.css">
+    <title>aula-30-10</title>
 </head>
 <body>
-   <p> primeiro paragrafo</p> 
-   <p> primeiro paragrafo</p>
-   <p> primeiro paragrafo</p>
-
-   <p class="c1">primeiro paragrafo</p>
-
-   <div>
-     texto qualquer
-
-   </div>
+    <p> primeiro paragrafo</p>
+    <p id="p1">primeiro paragrafo</p>
+    <p>primeiro paragrafo</p>
+    <p>primeiro paragrafo</p>
+    <p class="c1">paragrafo da classe</p>
+    <p class="c1">paragrafo da classe</p>
+    <p class="c1">paragrafo da classe</p>
+        <div>texto div</div>
+        <div id="d1">exemplo </div>
+    </div>
+    
 </body>
 </html>
